--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,4 @@
-/* Reset margins and paddings */
-body {
-  font-family: 'Roboto', sans-serif;
-  color: #434455;
-  background-color: #fff;
-}
-
+/* Reset styles */
 ul {
   list-style-type: none;
   margin: 0;
@@ -25,11 +19,23 @@ p {
   margin: 0;
   padding: 0;
 }
+/* Common styles start */
 .container {
   max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
 }
+body {
+  font-family: 'Roboto', sans-serif;
+  color: #434455;
+  background-color: #fff;
+}
+.image {
+  display: block;
+  max-width: 100%; 
+}
+
+
 /* Header styles start*/
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -174,7 +180,7 @@ p {
   gap: 24px;
 }
 .benefits-item {
-  width: calc(100% - 72px)/4;
+  width: calc((100% - 72px)/4);
 }
 .benefits-subtitle {
   font-weight: 500;
@@ -195,21 +201,40 @@ p {
 /* Benefits section styles end */
 
 /*Team and Portfolio section styles start */
-.team-container {
-  background-color: #f4f4fd;
+.team{
+  background-color: #f4f4fd; 
 }
-.team {
-  background-color: #f4f4fd;
+.team-container {
+  padding: 0;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+  padding-bottom: 120px;
+  justify-content: center;
+  
+  
 }
 .team-item {
-  background-color: #ffffff;
+  width: calc((100% -72px)/4);
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
 }
-.team-title {
-  
+.team-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+  padding: 32px 16px;
+}
 
-}
+
 .team-title,
 .portfolio-title {
+  padding: 120px 0 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -237,15 +262,57 @@ p {
   color: #434455;
 }
 
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  justify-content: center;
+  row-gap: 48px;
+  padding-bottom: 120px
+}
+.portfolio-item {
+  width: calc((100% - 48px)/3);
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+}
+.portfolio-card {
+display: flex;
+align-items: flex-start;
+justify-content: center;
+flex-direction: column;
+gap: 8px;
+padding: 32px 16px;
+}
+
+
+
 /* Team and Portfolio section styles end */
 
 /* Footer styles start */
 .footer {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
+
+.footer-container {
+  max-width: 264px;
+  margin: 0;
+}
+
+.footer-logo {
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  margin-bottom: 16px;
+}
+
 .footer-logo .logo-accent {
   color: #f4f4fd;
 }
+
 .footer-text {
   font-weight: 400;
   font-size: 16px;
