--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,11 @@ body {
 }
 .image {
   display: block;
-  max-width: 100%; 
+  max-width: 100%;
 }
-
+.section {
+  padding: 120px 0;
+}
 
 /* Header styles start*/
 .header {
@@ -52,7 +54,7 @@ body {
 .nav-list {
   display: flex;
   gap: 40px;
-  align-items;: center;
+  align-items: center;
 }
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -63,7 +65,6 @@ body {
   text-transform: uppercase;
   color: #4d5ae5;
   gap: 0px;
-  
 }
 
 .header-logo .logo-accent {
@@ -75,7 +76,7 @@ body {
 }
 .nav-link {
   padding: 24px 0;
-  display:block;
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -151,7 +152,7 @@ body {
   color: #fff;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   cursor: pointer;
-  margin-bottom: 188px 0
+  margin-bottom: 188px;
 }
 
 .order-button:hover,
@@ -176,11 +177,10 @@ body {
 
 .benefits-list {
   display: flex;
-  padding: 120px 0;
   gap: 24px;
 }
 .benefits-item {
-  width: calc((100% - 72px)/4);
+  width: calc((100% - 72px) / 4);
 }
 .benefits-subtitle {
   font-weight: 500;
@@ -201,8 +201,8 @@ body {
 /* Benefits section styles end */
 
 /*Team and Portfolio section styles start */
-.team{
-  background-color: #f4f4fd; 
+.team {
+  background-color: #f4f4fd;
 }
 .team-container {
   padding: 0;
@@ -211,15 +211,13 @@ body {
 .team-list {
   display: flex;
   gap: 24px;
-  padding-bottom: 120px;
   justify-content: center;
-  
-  
 }
 .team-item {
-  width: calc((100% -72px)/4);
+  width: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background: #fff;
 }
 .team-card {
@@ -231,10 +229,9 @@ body {
   padding: 32px 16px;
 }
 
-
 .team-title,
 .portfolio-title {
-  padding: 120px 0 72px;
+  padding-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -268,24 +265,19 @@ body {
   column-gap: 24px;
   justify-content: center;
   row-gap: 48px;
-  padding-bottom: 120px
 }
 .portfolio-item {
-  width: calc((100% - 48px)/3);
+  width: calc((100% - 48px) / 3);
   border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
 }
 .portfolio-card {
-display: flex;
-align-items: flex-start;
-justify-content: center;
-flex-direction: column;
-gap: 8px;
-padding: 32px 16px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+  padding: 32px 16px;
 }
-
-
 
 /* Team and Portfolio section styles end */
 
