--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ body {
   justify-content: center;
   flex-direction: column;
   gap: 8px;
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .team-title,
@@ -239,6 +239,7 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .team-subtitle,
@@ -248,6 +249,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team-text,
@@ -257,6 +259,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  text-align: center;
 }
 
 .portfolio-list {
@@ -268,7 +271,7 @@ body {
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  border-bottom: 1px solid #e7e9fc;
+  border: 1px solid #e7e9fc;
 }
 .portfolio-card {
   display: flex;
@@ -293,6 +296,7 @@ body {
 }
 
 .footer-logo {
+  display: inline-block;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
