--- a/css/styles.css
+++ b/css/styles.css
@@ -228,7 +228,6 @@ body {
   gap: 8px;
   padding: 32px 0;
 }
-
 .team-title,
 .portfolio-title {
   text-align: center;
@@ -244,6 +243,7 @@ body {
 
 .team-subtitle,
 .portfolio-subtitle {
+  text-align: center;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -271,7 +271,6 @@ body {
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  border: 1px solid #e7e9fc;
 }
 .portfolio-card {
   display: flex;
@@ -280,6 +279,7 @@ body {
   flex-direction: column;
   gap: 8px;
   padding: 32px 16px;
+  border: 1px solid #e7e9fc;
 }
 
 /* Team and Portfolio section styles end */
